PROJECT(Carbon-C++-Library)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++0x")

find_package(Threads)

set(Boost_USE_STATIC_LIBS ON) 
set(Boost_USE_MULTITHREADED ON)  
set(Boost_USE_STATIC_RUNTIME ON) 

find_package(Boost COMPONENTS system thread REQUIRED)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

INCLUDE_DIRECTORIES(".")
ADD_SUBDIRECTORY(carbon)
ADD_SUBDIRECTORY(test)


#TARGET_LINK_LIBRARIES(carbon-proxy-server ${BOOST_SYSTEM_LIBRARY} )
