PROJECT(Carbon-C++-Library CXX)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")

execute_process(COMMAND ${CMAKE_C_COMPILER} -dumpversion
                OUTPUT_VARIABLE GCC_VERSION)
if (GCC_VERSION VERSION_GREATER 4.8 OR GCC_VERSION VERSION_EQUAL 4.8)
        message(STATUS "GCC Version >= 4.8")
endif()

FIND_PACKAGE(Threads)

#SET(Boost_USE_STATIC_LIBS ON) 
#SET(Boost_USE_MULTITHREADED ON)  
#SET(Boost_USE_STATIC_RUNTIME ON) 

FIND_PACKAGE(Boost COMPONENTS system unit_test_framework REQUIRED)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})


ADD_SUBDIRECTORY(carbon)

#Setup CMake to run tests
ENABLE_TESTING()
ADD_SUBDIRECTORY(test)

